# papatya

./: .gitignore  GITHUB_RELEASE_KURULUM.txt  Papatya.vbs  package-lock.json  package.json
assets/audio-loopback/: PapatyaAudioLoopback.deps.json
native/PapatyaAudioLoopback/: Program.cs
native/PapatyaNativeCapture/: CMakeLists.txt  README.md
native/PapatyaNativeCapture/src/: main.cpp
scripts/: build-native-capture.ps1  create-shortcuts.ps1  repair-clips.js  start-electron.js  sync-publish-config.js
src/: index.html  main.js  overlay.css  overlay.html  preload.js  renderer.js  styles.css
